--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -484,3 +484,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.10-17
+  taskId: 55339334
+  timeCreate: Thu Sep 14 11:35:42 2023
+  timeStart: Thu Sep 14 11:35:58 2023
+  timeFinish: Thu Sep 14 11:44:46 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-15
+  taskId: 55339665
+  timeCreate: Thu Sep 14 11:52:58 2023
+  timeStart: Thu Sep 14 11:53:14 2023
+  timeFinish: Thu Sep 14 11:56:22 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
