--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -520,3 +520,30 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.10-18
+  taskId: 55347146
+  timeCreate: Thu Sep 14 18:35:15 2023
+  timeStart: Thu Sep 14 18:35:59 2023
+  timeFinish: Thu Sep 14 18:44:53 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-code-rhel8
+  tag: 3.10-24
+  taskId: 55347588
+  timeCreate: Thu Sep 14 18:50:15 2023
+  timeStart: Thu Sep 14 18:50:29 2023
+  timeFinish: Thu Sep 14 18:57:55 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 7 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-17
+  taskId: 55347836
+  timeCreate: Thu Sep 14 19:05:15 2023
+  timeStart: Thu Sep 14 19:05:43 2023
+  timeFinish: Thu Sep 14 19:09:21 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
