--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -547,3 +547,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.10-26
+  taskId: 55352515
+  timeCreate: Thu Sep 14 23:36:29 2023
+  timeStart: Thu Sep 14 23:36:44 2023
+  timeFinish: Thu Sep 14 23:43:58 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 7 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-18
+  taskId: 55352726
+  timeCreate: Thu Sep 14 23:54:26 2023
+  timeStart: Thu Sep 14 23:54:43 2023
+  timeFinish: Thu Sep 14 23:58:12 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
