--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -655,3 +655,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.10-31
+  taskId: 55371110
+  timeCreate: Fri Sep 15 12:33:15 2023
+  timeStart: Fri Sep 15 12:33:37 2023
+  timeFinish: Fri Sep 15 12:40:59 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 7 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-23
+  taskId: 55371835
+  timeCreate: Fri Sep 15 12:49:01 2023
+  timeStart: Fri Sep 15 12:49:44 2023
+  timeFinish: Fri Sep 15 12:54:12 2023
+  timeWait: 0 mins
+  timeBuild: 4 mins
+  timeTotal: 5 mins
