--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -673,3 +673,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 5 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.10-22
+  taskId: 55384901
+  timeCreate: Fri Sep 15 18:31:03 2023
+  timeStart: Fri Sep 15 18:31:12 2023
+  timeFinish: Fri Sep 15 18:39:36 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-24
+  taskId: 55385814
+  timeCreate: Fri Sep 15 18:50:47 2023
+  timeStart: Fri Sep 15 18:51:07 2023
+  timeFinish: Fri Sep 15 18:54:28 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
