--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -691,3 +691,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.10-33
+  taskId: 55398407
+  timeCreate: Sat Sep 16 04:04:43 2023
+  timeStart: Sat Sep 16 04:05:25 2023
+  timeFinish: Sat Sep 16 04:13:40 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-25
+  taskId: 55399090
+  timeCreate: Sat Sep 16 04:21:08 2023
+  timeStart: Sat Sep 16 04:21:47 2023
+  timeFinish: Sat Sep 16 04:24:46 2023
+  timeWait: 0 mins
+  timeBuild: 2 mins
+  timeTotal: 3 mins
