--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -709,3 +709,21 @@
   timeWait: 0 mins
   timeBuild: 2 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.10-34
+  taskId: 55432313
+  timeCreate: Sat Sep 16 14:50:05 2023
+  timeStart: Sat Sep 16 14:50:46 2023
+  timeFinish: Sat Sep 16 14:58:24 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-26
+  taskId: 55433520
+  timeCreate: Sat Sep 16 15:26:26 2023
+  timeStart: Sat Sep 16 15:26:45 2023
+  timeFinish: Sat Sep 16 15:30:32 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
