--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -907,3 +907,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.10-26
+  taskId: 55470972
+  timeCreate: Sun Sep 17 08:10:16 2023
+  timeStart: Sun Sep 17 08:10:17 2023
+  timeFinish: Sun Sep 17 08:18:46 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-33
+  taskId: 55472029
+  timeCreate: Sun Sep 17 08:42:39 2023
+  timeStart: Sun Sep 17 08:43:20 2023
+  timeFinish: Sun Sep 17 08:46:44 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
