--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -322,3 +322,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.9-20
+  taskId: 55548314
+  timeCreate: Mon Sep 18 17:41:41 2023
+  timeStart: Mon Sep 18 17:41:54 2023
+  timeFinish: Mon Sep 18 17:52:15 2023
+  timeWait: 0 mins
+  timeBuild: 10 mins
+  timeTotal: 10 mins
+- name: devspaces-operator-bundle
+  tag: 3.9-287
+  taskId: 55548436
+  timeCreate: Mon Sep 18 17:43:23 2023
+  timeStart: Mon Sep 18 17:43:28 2023
+  timeFinish: Mon Sep 18 17:46:46 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
