--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -358,3 +358,21 @@
   timeWait: 57 mins
   timeBuild: 4 mins
   timeTotal: 61 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.9-10
+  taskId: 55556788
+  timeCreate: Mon Sep 18 16:53:35 2023
+  timeStart: Mon Sep 18 16:53:51 2023
+  timeFinish: Mon Sep 18 16:58:56 2023
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 5 mins
+- name: devspaces-operator-bundle
+  tag: 3.9-289
+  taskId: 55558143
+  timeCreate: Mon Sep 18 17:22:11 2023
+  timeStart: Mon Sep 18 17:22:16 2023
+  timeFinish: Mon Sep 18 17:25:31 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
