--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -1078,3 +1078,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-server-rhel8
+  tag: 3.10-8
+  taskId: 55558031
+  timeCreate: Mon Sep 18 17:18:29 2023
+  timeStart: Mon Sep 18 17:19:11 2023
+  timeFinish: Mon Sep 18 17:27:15 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-42
+  taskId: 55559246
+  timeCreate: Mon Sep 18 17:50:13 2023
+  timeStart: Mon Sep 18 17:50:29 2023
+  timeFinish: Mon Sep 18 17:54:09 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
