--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -1096,3 +1096,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.10-29
+  taskId: 55561561
+  timeCreate: Mon Sep 18 22:36:38 2023
+  timeStart: Mon Sep 18 23:05:49 2023
+  timeFinish: Mon Sep 18 23:15:23 2023
+  timeWait: 29 mins
+  timeBuild: 9 mins
+  timeTotal: 38 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-43
+  taskId: 55563633
+  timeCreate: Mon Sep 18 23:22:52 2023
+  timeStart: Mon Sep 18 23:23:20 2023
+  timeFinish: Mon Sep 18 23:26:14 2023
+  timeWait: 0 mins
+  timeBuild: 2 mins
+  timeTotal: 3 mins
