--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -1132,3 +1132,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-operator
+  tag: 3.10-6
+  taskId: 55600693
+  timeCreate: Tue Sep 19 10:14:00 2023
+  timeStart: Tue Sep 19 10:45:58 2023
+  timeFinish: Tue Sep 19 11:02:21 2023
+  timeWait: 31 mins
+  timeBuild: 16 mins
+  timeTotal: 48 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-45
+  taskId: 55603513
+  timeCreate: Tue Sep 19 11:14:14 2023
+  timeStart: Tue Sep 19 11:31:12 2023
+  timeFinish: Tue Sep 19 11:35:33 2023
+  timeWait: 16 mins
+  timeBuild: 4 mins
+  timeTotal: 21 mins
