--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -1168,3 +1168,30 @@
   timeWait: 17 mins
   timeBuild: 4 mins
   timeTotal: 22 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.10-31
+  taskId: 55622098
+  timeCreate: Tue Sep 19 18:32:07 2023
+  timeStart: Tue Sep 19 18:32:42 2023
+  timeFinish: Tue Sep 19 18:41:14 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-code-rhel8
+  tag: 3.10-43
+  taskId: 55622534
+  timeCreate: Tue Sep 19 18:49:57 2023
+  timeStart: Tue Sep 19 18:50:42 2023
+  timeFinish: Tue Sep 19 18:58:15 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-47
+  taskId: 55623244
+  timeCreate: Tue Sep 19 19:08:16 2023
+  timeStart: Tue Sep 19 19:09:01 2023
+  timeFinish: Tue Sep 19 19:12:21 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
