--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -1195,3 +1195,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.10-44
+  taskId: 55624764
+  timeCreate: Tue Sep 19 20:02:47 2023
+  timeStart: Tue Sep 19 20:12:48 2023
+  timeFinish: Tue Sep 19 20:21:24 2023
+  timeWait: 10 mins
+  timeBuild: 8 mins
+  timeTotal: 18 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-48
+  taskId: 55625946
+  timeCreate: Tue Sep 19 20:30:02 2023
+  timeStart: Tue Sep 19 20:37:04 2023
+  timeFinish: Tue Sep 19 20:41:10 2023
+  timeWait: 7 mins
+  timeBuild: 4 mins
+  timeTotal: 11 mins
