--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -532,15 +532,15 @@
       },
       "3.9": {
         "CSV_VERSION": "3.9.0",
-        "CSV_VERSION_PREV": ""
+        "CSV_VERSION_PREV": "3.8.0"
       },
       "3.10": {
         "CSV_VERSION": "3.10.0",
-        "CSV_VERSION_PREV": ""
+        "CSV_VERSION_PREV": "3.8.0"
       },
       "3.x": {
         "CSV_VERSION": "3.10.0",
-        "CSV_VERSION_PREV": ""
+        "CSV_VERSION_PREV": "3.8.0"
       }
     }
   },
@@ -661,9 +661,6 @@
       "3.9": "1.22.19",
       "3.10": "1.22.19",
       "3.x": "1.22.19"
-    },
-    "slack_notification": {
-      "3.8": true
     }
   },
   "Copyright": [
